general fixes - work in progress

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,18 @@
   h3 {
     @apply text-xl md:text-2xl mb-3 mt-6;
   }
+
+  h4 {
+    @apply text-lg md:text-2xl mb-3 mt-6;
+  }
+
+  h5 {
+    @apply md:text-2xl mb-3 mt-6;
+  }
+
+  h6 {
+    @apply md:text-2xl mb-3 mt-6;
+  }
   
   p {
     @apply mb-4;
@@ -82,5 +94,9 @@
   
   .prose table th {
     @apply bg-neutral-100;
+  }
+
+  .prose ul, ol {
+    @apply flex gap-4 flex-col
   }
 }
