--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,7 +41,7 @@
   }
   
   a {
-    @apply text-primary hover:underline focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2;
+    @apply text-primary hover:underline focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 py-2.5;
   }
   
   /* Making sure focus styles are visible */
@@ -80,7 +80,7 @@
   }
   
   .prose code {
-    @apply bg-neutral-100 px-1.5 py-0.5 rounded text-sm;
+    @apply bg-neutral-100;
   }
   
   .prose table {
